--- a/src/app/components/not-shared/converter/converter-item-skeleton/converter-item-skeleton.component.html
+++ b/src/app/components/not-shared/converter/converter-item-skeleton/converter-item-skeleton.component.html
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-12 w-full justify-end items-center gap-3">
     <div class="flex items-center justify-center col-span-1 md:col-span-3">
-        <a class="w-fit leading-5 hidden md:block rtl text-xs py-1.5 text-center px-4 rounded-lg text-transparent animate-pulse bg-light-border dark:bg-dark-border">قیمت آیتم</a>
+        <a class="w-fit leading-5 hidden md:block rtl text-xs py-1.5 text-center px-4 rounded-lg text-transparent animate-pulse bg-light-border dark:bg-dark-border line-clamp-1 text-ellipsis">قیمت آیتم</a>
         <a class="invisible block md:hidden rtl text-lg px-2 rounded-md text-center hover:bg-light-text3 hover:dark:bg-dark-border2"><i class="bi bi-three-dots-vertical"></i></a>
     </div>
 
