--- a/src/app/pages/gold-calculator/gold-calculator.component.html
+++ b/src/app/pages/gold-calculator/gold-calculator.component.html
@@ -67,7 +67,7 @@
                     <p class="dropdown-title-base">قیمت طلا</p>
                     <div class="relative w-full">
                         <p class="input-unit-base">تومان</p>
-                        <input [value]="goldValue()" type="text" commafyNumber class="input-base rtl">
+                        <input maxlength="19" placeholder="0" [value]="goldValue()" (input)="onGoldInputChange($event)" type="text" commafyNumber class="input-base rtl">
                     </div>
                 </div>
                 <div class="w-full flex flex-row-reverse gap-4">
@@ -76,7 +76,7 @@
                         <p class="dropdown-title-base">وزن</p>
                         <div class="relative w-full">
                             <p class="input-unit-base">{{ goldTypes[currentGoldType()].weightUnit }}</p>
-                            <input maxlength="16" [value]="weightValue()" type="text" commafyNumber class="input-base rtl">
+                            <input maxlength="16" placeholder="0" (input)="onWeightInputChange($event)" [value]="weightValue()" type="text" commafyNumber class="input-base rtl">
                         </div>
                     </div>
                     <!-- Wage Input -->
@@ -84,7 +84,7 @@
                         <p class="dropdown-title-base">اجرت</p>
                         <div class="relative w-full">
                             <p class="input-unit-base">درصد</p>
-                            <input maxlength="16" [value]="wageValue()" type="text" commafyNumber class="input-base rtl">
+                            <input maxlength="16" placeholder="0" [value]="wageValue()" (input)="onWageInputChange($event)" type="text" commafyNumber class="input-base rtl">
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                     <p class="dropdown-title-base">مالیات</p>
                     <div class="relative w-full">
                         <p class="input-unit-base">درصد</p>
-                        <input maxlength="16" [value]="taxValue()" type="text" commafyNumber class="input-base rtl">
+                        <input maxlength="16" placeholder="0" [value]="taxValue()" (input)="onTaxInputChange($event)" type="text" commafyNumber class="input-base rtl">
                     </div>
                 </div>
                 <!-- Profit Input -->
@@ -101,7 +101,7 @@
                     <p class="dropdown-title-base">سود فروشنده</p>
                     <div class="relative w-full">
                         <p class="input-unit-base">{{ profitType() === 0 ? 'درصد' : 'تومان' }}</p>
-                        <input maxlength="16" [value]="profitValue()" type="text" commafyNumber class="input-base rtl">
+                        <input maxlength="16" placeholder="0" [value]="profitValue()" (input)="onProfitInputChange($event)" type="text" commafyNumber class="input-base rtl">
                     </div>
                 </div>
                 <div class="flex justify-start gap-4 w-full">
@@ -112,7 +112,7 @@
             @else {
                 <!-- Ounce Types -->
                 <div class="w-full text-right">
-                    <p class="dropdown-title-base">نوع طلا</p>
+                    <p class="dropdown-title-base">واحد طلا</p>
                     
                     <div  class="relative w-full text-sm">
                         <button
@@ -146,7 +146,7 @@
                     <p class="dropdown-title-base">وزن</p>
                     <div class="relative w-full">
                         <p class="input-unit-base">{{ ounceTypes[currentOunceType()].title }}</p>
-                        <input maxlength="16" [value]="weightValue()" commafyNumber (input)="onWeightInputChange($event)" type="text" commafyNumber class="input-base rtl">
+                        <input maxlength="16" placeholder="0" [value]="weightValue()" commafyNumber (input)="onWeightInputChange($event)" type="text" commafyNumber class="input-base rtl">
                     </div>
                 </div>
             }
@@ -155,10 +155,30 @@
         <div class="flex flex-col flex-3/5 border border-light-border2 dark:border-dark-border2 p-2 md:p-4 rounded-lg leading-[180%] h-fit">
             <div class="w-full items-center justify-start rtl gap-1 flex flex-col pb-2 md:py-3">
                 @if (calculatorType() === 0) {
-                    <span class="w-full flex justify-start text-dark-text dark:text-light-text text-sm md:text-base gap-2 mb-1">
+                    <span class="w-full flex justify-start text-dark-text dark:text-light-text font-bold text-sm md:text-base gap-2 mb-1">
                         قیمت نهایی:&nbsp;
-                        <p class="text-dark dark:text-light">{{ weightValue() }}</p>
+                        <p class="text-dark dark:text-light">{{ totalGoldValue() }}</p>
                         <p class="text-dark-text4 dark:text-light-text4">تومان</p>
+                    </span>
+                    <span class="w-full flex justify-start text-dark-text dark:text-light-text text-sm md:text-base gap-2 mb-1">
+                        قیمت طلا:&nbsp;
+                        <p class="text-dark font-bold dark:text-light text-xs md:text-sm">{{ mainGoldValue() }}</p>
+                        <p class="text-dark-text4 dark:text-light-text4 text-xs md:text-sm">تومان</p>
+                    </span>
+                    <span class="w-full flex justify-start text-dark-text dark:text-light-text text-sm md:text-base gap-2 mb-1">
+                        اجرت:&nbsp;
+                        <p class="text-dark font-bold dark:text-light text-xs md:text-sm">{{ totalWageValue() }}</p>
+                        <p class="text-dark-text4 dark:text-light-text4 text-xs md:text-sm">تومان</p>
+                    </span>
+                    <span class="w-full flex justify-start text-dark-text dark:text-light-text text-sm md:text-base gap-2 mb-1">
+                        مالیات:&nbsp;
+                        <p class="text-dark font-bold dark:text-light text-xs md:text-sm">{{ totalTaxValue() }}</p>
+                        <p class="text-dark-text4 dark:text-light-text4 text-xs md:text-sm">تومان</p>
+                    </span>
+                    <span class="w-full flex justify-start text-dark-text dark:text-light-text text-sm md:text-base gap-2 mb-1">
+                        سود فروشنده:&nbsp;
+                        <p class="text-dark font-bold dark:text-light text-xs md:text-sm">{{ totalProfitValue() }}</p>
+                        <p class="text-dark-text4 dark:text-light-text4 text-xs md:text-sm">تومان</p>
                     </span>
                 }
                 @else {
@@ -180,6 +200,19 @@
                 }
             </div>
             <hr class="border border-light-text4 dark:border-dark-text2">
+            <span class="grid grid-cols-12 w-full rtl py-1 md:py-2 mb-2">
+                <p class="text-dark-text2 dark:text-light-text2 text-xs leaading-[180%] col-span-4">عنوان</p>
+                <p class="text-dark-text2 dark:text-light-text2 text-xs leaading-[180%] col-span-4 md:col-span-3">قیمت تومانی</p>
+                <p class="text-dark-text2 dark:text-light-text2 text-xs leaading-[180%] col-span-3">قیمت دلاری</p>
+            </span>
+            @if (gram18Value) {
+                @for (item of relatedItems(); track item?.id ?? $index) {
+                    <app-converter-item class="w-full z-[1] {{ $index != 2 ? 'mb-1' : 'mb-0' }}" [currencyItem]="item!" />
+                }
+            }
+            <app-converter-item-skeleton class="w-full mb-1 z-[4] {{ gram18Value ? 'hidden' : 'block' }}" />
+            <app-converter-item-skeleton class="w-full mb-1 z-[4] {{ gram18Value ? 'hidden' : 'block' }}" />
+            <app-converter-item-skeleton class="w-full z-[4] {{ gram18Value ? 'hidden' : 'block' }}" />
         </div>
             
     </div>
