Skeleton styles optimized

--- a/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
+++ b/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
@@ -38,35 +38,32 @@
                 }
             }
             @else {
-                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2 pointer-events-none">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
                     <td class="table-item-base dark:text-white text-dark">امروز</td>
                 </tr>
-                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2 pointer-events-none">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
                     <td class="table-item-base dark:text-white text-dark rtl">30 روز</td>
                 </tr>
-                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2 pointer-events-none">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
                     <td class="table-item-base dark:text-white text-dark rtl">60 روز</td>
                 </tr>
-                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2 pointer-events-none">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
                     <td class="table-item-base dark:text-white text-dark rtl">90 روز</td>
                 </tr>
-                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
-                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></p></td>
+                <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2 pointer-events-none">
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
+                    <td class="table-item-base text-center"><p class="mx-auto text-center rounded-sm text-sm w-12 h-full skeleton-base z-0"></p></td>
                     <td class="table-item-base dark:text-white text-dark rtl">180 روز</td>
                 </tr>
             }
         </tbody>
     </table>
-    
-    <!-- <div class="w-full rounded-sm h-40 animate-pulse bg-light-border dark:bg-dark-border"></div> -->
-    
 </div>
