--- a/src/app/components/not-shared/currency-item-details/related-empty-item/related-empty-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/related-empty-item/related-empty-item.component.html
@@ -1,14 +1,14 @@
-<article class="w-full justify-center flex-1 px-3 lg:px-0 lg:pt-1 pb-2 lg:pl-2 flex items-center hover:cursor-pointer lg:hover:bg-light-text3 lg:rounded-lg lg:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 lg:border-b-0' : ''}}">
+<article class="pointer-events-none w-full justify-center flex-1 px-3 lg:px-0 lg:pt-1 pb-2 lg:pl-2 flex items-center lg:rounded-lg {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 lg:border-b-0' : ''}}">
     <div class="flex flex-1 flex-col">
         <div class="flex w-full items-center justify-between">
-            <span class="font-normal text-sm leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">some changes</span>
-            <span class="line-clamp-2 text-ellipsis text-right rtl text-xs font-medium leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">some title</span>
+            <span class="font-normal text-sm leading-[180%] skeleton-base z-0">some changes</span>
+            <span class="line-clamp-2 text-ellipsis text-right rtl text-xs font-medium leading-[180%] skeleton-base z-0">some title</span>
         </div>
         <div class="flex w-full items-center justify-between">
-            <span class="text-xs font-normal leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">some price</span>
-            <span class="text-right text-xs font-normal leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">shorted Name</span>
+            <span class="text-xs font-normal leading-[180%] skeleton-base z-0">some price</span>
+            <span class="text-right text-xs font-normal leading-[180%] skeleton-base z-0">shorted</span>
         </div>
     </div>
-    <span class="w-11 h-11 rounded-full ml-2.5 animate-pulse bg-light-border dark:bg-dark-border"></span>
+    <span class="w-11 h-11 ml-2.5 skeleton-base z-0 rounded-full"></span>
     
 </article>
