--- a/src/app/components/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/shared/breadcrumb/breadcrumb.component.html
@@ -25,7 +25,7 @@
         <li
             class="flex items-center"
         >
-            <span class="animate-pulse bg-light-border dark:bg-dark-border h-fit text-transparent rounded-lg leading-5">item title title</span>
+            <span class="skeleton-base z-0 h-fit leading-5">item title title</span>
             <span class="mx-2 text-dark-text4 dark:text-light-text4">&lt;</span>
             <span class="text-dark-text4 dark:text-light-text4 transition-colors duration-300">صفحه اصلی</span>
         </li>
