--- a/src/app/components/not-shared/currency-item-details/item-info-skeleton/item-info-skeleton.component.html
+++ b/src/app/components/not-shared/currency-item-details/item-info-skeleton/item-info-skeleton.component.html
@@ -1,4 +1,4 @@
-<div class="my-6 leading-[180%] flex-1 justify-center md:justify-between flex w-full px-4 py-3 bg-light-hover dark:bg-dark-text rounded-lg">
+<div class="pointer-events-none my-6 leading-[180%] flex-1 justify-center md:justify-between flex w-full px-4 py-3 bg-light-hover dark:bg-dark-text rounded-lg">
     
     <!-- Mobile -->
     <div class="flex md:hidden flex-col w-full">
@@ -16,35 +16,35 @@
             </div>
             <div class="flex">
                 <div class="flex flex-wrap-reverse items-center justify-end">
-                    <span class="text-base font-medium text-right leading-[180%] ml-1 text-transparent animate-pulse bg-light-border dark:bg-dark-border">item title</span>
+                    <span class="text-base font-medium text-right leading-[180%] ml-1 skeleton-base z-0">item title</span>
                 </div>
-                <span class="w-8 h-8 md:w-23 md:h-23 rounded-full object-cover ml-2 text-transparent animate-pulse bg-light-border dark:bg-dark-border"></span>
+                <span class="w-8 h-8 md:w-23 md:h-23 object-cover ml-2 skeleton-base z-0 rounded-full"></span>
             </div>
         </div>
         <div class="flex mt-2 justify-between w-full">
-            <span class="font-normal text-sm leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">last Price Info</span>
-            <span class="font-normal text-sm leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">last Price Info</span>
+            <span class="font-normal text-sm leading-[180%] skeleton-base z-0">last Price Info</span>
+            <span class="font-normal text-sm leading-[180%] skeleton-base z-0">last Price Info</span>
         </div>
         
         <div
             class="flex mt-2 justify-between w-full"
             >
-            <span class="font-normal text-xs leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">dollar Changes</span>
-            <span class="font-normal text-xs leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">dollar Changes</span>
+            <span class="font-normal text-xs leading-[180%] skeleton-base z-0">dollar Changes</span>
+            <span class="font-normal text-xs leading-[180%] skeleton-base z-0">dollar Changes</span>
         </div>
     </div>
     
     <!-- Desktop -->
     <div class="hidden md:flex flex-col justify-center">
-        <span class="leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">toman String Price</span>
-        <span class="leading-[180%] text-xs align-middle text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border mt-3">last Price Info</span>
+        <span class="leading-[180%] skeleton-base z-0">toman String Price</span>
+        <span class="leading-[180%] text-xs align-middle skeleton-base z-0 mt-3">last Price Info</span>
     </div>
 
     <div class="hidden md:flex justify-end items-center">
         <div class="flex flex-col justify-center">
-            <h1 class="text-xl text-right rtl mr-1 font-medium leading-[180%] text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">item title</h1>
+            <h1 class="text-xl text-right rtl mr-1 font-medium leading-[180%] skeleton-base z-0">item title</h1>
             <div class="flex justify-end mt-2 leading-[180%]">
-                <span class="text-xl text-transparent rounded-lg animate-pulse bg-light-border dark:bg-dark-border">shorted Name</span>
+                <span class="text-xl skeleton-base z-0">shorted Name</span>
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none" viewBox="0 0 24 24"
@@ -56,7 +56,7 @@
                 </svg>
             </div>
         </div>
-        <span class="w-8 h-8 md:w-23 md:h-23 object-cover ml-2 rounded-full animate-pulse bg-light-border dark:bg-dark-border"></span>
+        <span class="w-8 h-8 md:w-23 md:h-23 object-cover ml-2 skeleton-base z-0 rounded-full"></span>
     </div>
     
 </div>
