--- a/src/app/components/not-shared/home/empty-item/empty-item.component.html
+++ b/src/app/components/not-shared/home/empty-item/empty-item.component.html
@@ -1,15 +1,15 @@
-<div class="min-h-[4.853rem] animate-pulse px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
+<div class="min-h-[4.853rem] px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
     <div class="hidden md:flex w-[20%]">
         <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal opacity-0"></i>
-        <strong class="text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse font-normal line-clamp-1 text-ellipsis">اطلاعات بیشتر</strong>
+        <strong class="skeleton-base z-0 font-normal line-clamp-1 text-ellipsis">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
         
-        <strong class="font-normal text-xs text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse">+1.2%</strong>
+        <strong class="font-normal text-xs skeleton-base z-0">+1.2%</strong>
     </div>
     <div class="flex flex-col items-end justify-center w-[25%] relative">
 
-        <strong class="font-normal text-xs md:text-sm leading-4.5 md:leading-5 text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse">us dollar</strong>
+        <strong class="font-normal text-xs md:text-sm leading-4.5 md:leading-5 skeleton-base z-0">us dollar</strong>
         <div class="flex justify-center items-start gap-2 relative ">
             <strong class="font-normal text-2xs md:text-sm opacity-0">usd</strong>
         </div>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
-            <div class="md:w-8 md:h-8 w-6 h-6 object-cover rounded-full mr-2 mt-1 bg-light-border dark:bg-dark-border animate-pulse" ></div>
+            <div class="md:w-8 md:h-8 w-6 h-6 object-cover mr-2 mt-1 skeleton-base z-0 rounded-full" ></div>
         
             <div class="flex">
                 <span class="w-6 h-7 opacity-0 flex justify-end items-center sm:items-end">
