Hint icons added to Gold calculator page

--- a/src/app/pages/gold-calculator/gold-calculator.component.html
+++ b/src/app/pages/gold-calculator/gold-calculator.component.html
@@ -93,7 +93,7 @@
                         <div class="relative flex flex-row-reverse gap-2">
                             <p class="dropdown-title-base">اجرت</p>
                             <div class="group h-full flex justify-center items-start"> 
-                                <span class="z-[2] pointer-events-none group-hover:not-target:opacity-100 opacity-0 duration-300 flex bg-light-border dark:bg-dark-border absolute flex-col top-0 h-12 justify-center items-end w-70 top-speech-bubble">
+                                <span class="z-[3] pointer-events-none group-hover:not-target:opacity-100 opacity-0 duration-300 flex bg-light-border dark:bg-dark-border absolute flex-col justify-center items-end w-55 md:w-70 top-speech-bubble top-0 md:top-0 h-14 md:h-12 ">
                                     <p class="rtl text-dark-text dark:text-light-text text-xs md:text-sm leading-4.5 md:leading-5">بصورت پیشفرض، طلای 18 و 24 عیار اجرت 7 درصد دارند و مابقی صفر درصد</p>
                                 </span>
                                 <i class="hover:cursor-pointer z-[2] bi bi-info-circle-fill text-2xs md:text-sm text-dark-text2 dark:text-light-text2 relative"></i>
