--- a/src/app/components/not-shared/home/empty-item/empty-item.component.html
+++ b/src/app/components/not-shared/home/empty-item/empty-item.component.html
@@ -1,6 +1,6 @@
 <div class="min-h-[4.853rem] px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
     <div class="hidden md:flex w-[20%]">
-        <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal opacity-0"></i>
+        <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal invisible"></i>
         <strong class="skeleton-base z-0 font-normal line-clamp-1 text-ellipsis">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
@@ -11,21 +11,21 @@
 
         <strong class="font-normal text-xs md:text-sm leading-4.5 md:leading-5 skeleton-base z-0">us dollar</strong>
         <div class="flex justify-center items-start gap-2 relative ">
-            <strong class="font-normal text-2xs md:text-sm opacity-0">usd</strong>
+            <strong class="font-normal text-2xs md:text-sm invisible">usd</strong>
         </div>
     </div>
     <div class="flex justify-end items-start gap-1.5 flex-1">
         <div class="flex pl-0.5 overflow-hidden text-ellipsis">
             <div class="flex flex-col items-end justify-start">
-                <p class="text-transparent bg-transparent rounded-none opacity-0 sm:opacity-100 sm:rounded-sm sm:bg-light-border sm:dark:bg-dark-border order-2 sm:order-1 w-full text-end text-2xs sm:text-xs md:text-base leading-6">usd dollar</p>
-                <p class="order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 text-transparent bg-light-border dark:bg-dark-border opacity-100 sm:opacity-0 rounded-sm sm:bg-transparent sm:rounded-none font-normal text-xs sm:text-sm">usd dollar</p>
+                <p class="text-transparent bg-transparent rounded-none invisible sm:visible sm:rounded-sm sm:bg-light-border sm:dark:bg-dark-border order-2 sm:order-1 w-full text-end text-2xs sm:text-xs md:text-base leading-6">usd dollar</p>
+                <p class="order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 text-transparent bg-light-border dark:bg-dark-border visible sm:invisible rounded-sm sm:bg-transparent sm:rounded-none font-normal text-xs sm:text-sm">usd dollar</p>
             </div>
         </div>
         <div class="flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
             <div class="md:w-8 md:h-8 w-6 h-6 object-cover mr-2 mt-1 skeleton-base z-0 rounded-full" ></div>
         
             <div class="flex">
-                <span class="w-6 h-7 opacity-0 flex justify-end items-center sm:items-end">
+                <span class="w-6 h-7 invisible flex justify-end items-center sm:items-end">
                     <star-icon />
                 </span>
             </div>
