--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -6,7 +6,7 @@
                 <p class="text-dark-text dark:text-light-text rtl text-sm leading-[180%]"> - © 2025</p>
             </span>
             <div class="w-9">
-                <img class="h-full object-cover w-full" src="assets/images/arzyab_main.png" alt="logo">
+                <img loading="lazy" decoding="async" class="h-full object-cover w-full" src="assets/images/arzyab_main.png" alt="logo">
             </div>
         </div>
         <div class="flex flex-col justify-center items-end self-start md:self-auto">
