--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -78,7 +78,7 @@
         <div class="hidden md:flex items-center h-full gap-2">
             <h1 class="text-green-btn text-lg tracking-wide">ارزیاب</h1>
             <div class="h-full w-auto py-4.5 ">
-                <img class="h-full object-cover w-full" src="assets/images/arzyab_main.png" alt="logo">
+                <img class="h-full object-cover w-full" loading="lazy" decoding="async" src="assets/images/arzyab_main.png" alt="logo">
             </div>
         </div>
     </div>
