--- a/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
@@ -23,6 +23,6 @@
             <p class="line-clamp-1 text-ellipsis text-dark-text2 dark:text-light-text2 text-right text-xs font-normal leading-[180%]">{{item?.shortedName}}</p>
         </div>
     </div>
-    <img class="w-11 h-11 rounded-full object-cover ml-2.5" src={{item?.img}} alt={{item?.title}}>
+    <img loading="lazy" decoding="async" class="w-11 h-11 rounded-full object-cover ml-2.5" src={{item?.img}} alt={{item?.title}}>
     
 </article>
