Fit content chart improved

--- a/src/app/components/shared/mobile-hamberger-menu/mobile-hamberger-menu.component.html
+++ b/src/app/components/shared/mobile-hamberger-menu/mobile-hamberger-menu.component.html
@@ -22,7 +22,7 @@
     </button>
   </div>
 
-  <ul class="space-y-5 flex flex-col items-end">
+  <ul class="gap-6 flex flex-col items-end">
     <li>
       <a
         routerLink="/"
